--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "Derby Boilerplate",
+  "name": "DerbyBoilerplate",
   "description": "",
   "version": "0.0.1",
   "main": "./server.js",
   "dependencies": {
     "derby": "git://github.com/codeparty/derby.git#master",
     "racer": "git://github.com/codeparty/racer.git#master",
-
     "express": "3.0.4",
     "coffee-script": ">=1.3.3",
     "racer-db-mongo": "~0.3.13",
+    "derby-auth": "0.0.24",
+    "passport-facebook": "~0.1.4"
   },
   "devDependencies": {
     "coffee-script": ">=1.3.3"
